--- a/New folder (5)/music/templates/music/index.html
+++ b/New folder (5)/music/templates/music/index.html
@@ -1,13 +1,13 @@
-{% extends 'music/base.html' %}
-{% block title %}Index{% endblock %}
-{% block albums_active %}active{% endblock %}
+
 {% block body %}
 
            {% for album in all_albums %}
               <div class="col-sm-4 col-lg-2" align="center">
                 <div class="jumbotron">
                     <div id="shasha">
-                        <img src="{{ album.album_logo.url }}">
+                        <img src="{{ album.album_logo.url }}">{% extends 'music/base.html' %}
+{% block title %}Index{% endblock %}
+{% block albums_active %}active{% endblock %}
                     </div>
                     <div>
                     <div id = "tanishq">
@@ -15,8 +15,8 @@
                     -{{ album.artist }}<br>
                     </div>
                         <div>
-                            <a href="{% url 'detail' album.id %}" class="btn btn-primary btn-sm" role="button">View Details</a>
-                             <form class="" action="{%url 'album-delete' album.id%}" method="post" style= "display: inline;">
+                            <a href="{% url 'music:detail' album.id %}" class="btn btn-primary btn-sm" role="button">View Details</a>
+                             <form class="" action="{% url 'music:album-delete' album.id %}" style="display :inline">
                                       {% csrf_token %}
                                       <button type="submit" class="btn btn-default btn-sm">
                                             <span class="glyphicon glyphicon-trash"></span>
