--- a/website/music/templates/music/detail.html
+++ b/website/music/templates/music/detail.html
@@ -1,10 +1,39 @@
-<img src="{{ album.album_logo }}">
+{% extends 'music/base.html' %}
+{% block title %}Album Details{% endblock %}
 
-<h1>{{ album.album_title }}</h1>
-<h3>{{ album.artist }}</h3>
+{% block body %}
+    <img src="{{ album.album_logo }}" style="width: 250px;">
 
-<ul>
+    <h1>{{ album.album_title }}</h1>
+    <h2>{{ album.artist }}</h2>
+
     {% for song in album.song_set.all %}
-    <li>{{ song.song_title }} - {{ song.file_type }}</li>
+            {{ song.song_title }}
+            {% if song.is_favorite %}
+                <img src="https://cdn.dribbble.com/users/2319/screenshots/1664629/favorites.png" />
+            {% endif %}
+            <br>
     {% endfor %}
-</ul>
+
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
