--- a/Final_Website/music/templates/music/login_form.html
+++ b/Final_Website/music/templates/music/login_form.html
@@ -1,5 +1,5 @@
 {% extends 'music/base.html' %}
-{% block title %}Add a New Album{% endblock %}
+{% block title %}Login{% endblock %}
 {% block albums_active %}active{% endblock %}
 
 {% block body %}
@@ -10,13 +10,13 @@
           <div class="col-sm-12 col-md-7">
               <div class="panel panel-default">
                   <div class="panel-body">
-
+                      <h3>Login</h3>
                       <form class="form-horizontal" action="" method="post" enctype="multipart/form-data">
                           {% csrf_token %}
                           {% include 'music/form-template.html' %}
                           <div class="form-group">
                               <div class="col-sm-offset-2 col-sm-10">
-                                  <button type="submit" class="btn btn-success">Submit</button>
+                                  <button type="submit" class="btn btn-success">Login</button>
                               </div>
                           </div>
                       </form>
