--- a/Final_Website/music/templates/music/base.html
+++ b/Final_Website/music/templates/music/base.html
@@ -39,7 +39,7 @@
                 </li>
             </ul>
 
-            <form class="navbar-form navbar-left" role="search" method="get" action="#">
+            <form class="navbar-form navbar-left" role="search" method="get" action="{%url 'search'%}">
                 <div class="form-group">
                     <input type="text" class="form-control" name="q" value="">
                 </div>
