--- a/Final_Website/music/templates/music/index.html
+++ b/Final_Website/music/templates/music/index.html
@@ -17,7 +17,7 @@
                                  <form class="" action="{% url 'music:album-delete' album.id %}" method="post" style="display: inline;">
                                         {% csrf_token %}
                                         <button type="submit" class="btn btn-default btn-sm">
-                                               <span class="glyphicon glyphicon-trash"></span>
+                                               <span class="glyphicon glyphicon-trash"></span>&nbsp;
                                         </button>
                                  </form>
                             </div>
